cmake_minimum_required(VERSION 4.1)
project(C___Study)

set(CMAKE_CXX_STANDARD 11)

add_executable(C___Study Bases/hello.cpp)
add_executable(format Bases/format.cpp)
add_executable(defaultPara Bases/defaultPara.cpp)
add_executable(overloadFunc Bases/overloadFunc.cpp)
add_executable(quote Bases/quote.cpp)
add_executable(StringBase Bases/StringBase.cpp)
add_executable(alloMemory Bases/alloMemory.cpp)